--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,11 +14,11 @@ body {
 }
 
 a {
-  color: #ffc451;
+  color: #43aae1;
 }
 
 a:hover {
-  color: #ffd584;
+  color: #43aae1;
   text-decoration: none;
 }
 
