--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,14 +45,14 @@ h1, h2, h3, h4, h5, h6 {
   width: 40px;
   height: 40px;
   border-radius: 4px;
-  background: #ffc451;
+  background: 43aae1;
   color: #151515;
   transition: all 0.4s;
 }
 
 .back-to-top i:hover {
   background: #151515;
-  color: #ffc451;
+  color: #43aae1;
 }
 
 /*--------------------------------------------------------------
@@ -74,7 +74,7 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: calc(50% - 0px);
   left: calc(50% - 30px);
-  border: 6px solid #ffc451;
+  border: 6px solid #43aae1;
   border-top-color: #151515;
   border-bottom-color: #151515;
   border-radius: 50%;
@@ -139,7 +139,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo a span {
-  color: #ffc451;
+  color: #43aae1;
 }
 
 #header .logo img {
@@ -177,7 +177,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
-  color: #ffc451;
+  color: #43aae1;
 }
 
 .nav-menu .drop-down ul {
@@ -215,7 +215,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .nav-menu .drop-down ul a:hover, .nav-menu .drop-down ul .active > a, .nav-menu .drop-down ul li:hover > a {
   color: #151515;
-  background: #ffc451;
+  background: #43aae1;
 }
 
 .nav-menu .drop-down > a:after {
@@ -267,7 +267,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.3s;
   font-size: 14px;
   display: inline-block;
-  border: 2px solid #ffc451;
+  border: 2px solid #9c9993;
 }
 
 .get-started-btn:hover {
@@ -336,7 +336,7 @@ h1, h2, h3, h4, h5, h6 {
 .mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
   color: #151515;
   text-decoration: none;
-  background: #ffc451;
+  background: #43aae1;
 }
 
 .mobile-nav .drop-down > a:after {
@@ -427,7 +427,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero h1 span {
-  color: #ffc451;
+  color: #43aae1;
 }
 
 #hero h2 {
@@ -447,7 +447,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero .icon-box i {
   font-size: 32px;
   line-height: 1;
-  color: #ffc451;
+  color: #43aae1;
 }
 
 #hero .icon-box h3 {
@@ -465,11 +465,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .icon-box h3 a:hover {
-  color: #ffc451;
+  color: #43aae1;
 }
 
 #hero .icon-box:hover {
-  border-color: #ffc451;
+  border-color: #43aae1;
 }
 
 @media (min-width: 1024px) {
@@ -559,7 +559,7 @@ section {
   font-size: 20px;
   left: 0;
   top: -3px;
-  color: #ffc451;
+  color: #43aae1;
 }
 
 .about .content p:last-child {
@@ -609,7 +609,7 @@ section {
 }
 
 .clients .owl-dot.active {
-  background-color: #ffc451 !important;
+  background-color: #43aae1 !important;
 }
 
 /*--------------------------------------------------------------
@@ -632,7 +632,7 @@ section {
 .features .icon-box i {
   font-size: 48px;
   float: left;
-  color: #ffc451;
+  color: #43aae1;
 }
 
 .features .icon-box p {
@@ -663,7 +663,7 @@ section {
   margin: 0 auto;
   width: 64px;
   height: 64px;
-  background: #ffc451;
+  background: #43aae1;
   border-radius: 4px;
   display: flex;
   align-items: center;
@@ -690,7 +690,7 @@ section {
 }
 
 .services .icon-box h4 a:hover {
-  color: #ffc451;
+  color: #43aae1;
 }
 
 .services .icon-box p {
@@ -739,8 +739,8 @@ section {
 }
 
 .cta .cta-btn:hover {
-  background: #ffc451;
-  border-color: #ffc451;
+  background: #43aae1;
+  border-color: #43aae1;
   color: #151515;
 }
 
@@ -774,7 +774,7 @@ section {
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
   color: #151515;
-  background: #ffc451;
+  background: #43aae1;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -851,7 +851,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #ffc451;
+  color: #43aae1;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -891,7 +891,7 @@ section {
 .counts .content .count-box i {
   display: block;
   font-size: 36px;
-  color: #ffc451;
+  color: #43aae1;
   float: left;
 }
 
@@ -1036,7 +1036,7 @@ section {
 }
 
 .testimonials .owl-dot.active {
-  background-color: #ffc451 !important;
+  background-color: #43aae1 !important;
 }
 
 @media (min-width: 1024px) {
@@ -1093,12 +1093,12 @@ section {
   background: rgba(255, 255, 255, 0.8);
   display: inline-block;
   transition: ease-in-out 0.3s;
-  color: #ffc451;
+  color: #43aae1;
 }
 
 .team .member .social a:hover {
   color: #fff;
-  background: #ffc451;
+  background: #43aae1;
 }
 
 .team .member .social i {
@@ -1145,7 +1145,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  background: #ffc451;
+  background: #43aae1;
   color: #151515;
   float: left;
   width: 44px;
@@ -1243,7 +1243,7 @@ section {
 }
 
 .contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
-  border-color: #ffc451;
+  border-color: #43aae1;
 }
 
 .contact .php-email-form input {
@@ -1255,7 +1255,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #ffc451;
+  background: #43aae1;
   border: 0;
   padding: 10px 24px;
   color: #151515;
@@ -1365,7 +1365,7 @@ section {
 }
 
 .portfolio-details .portfolio-details-carousel .owl-dot.active {
-  background-color: #ffc451 !important;
+  background-color: #43aae1 !important;
 }
 
 .portfolio-details .portfolio-info {
@@ -1451,7 +1451,7 @@ section {
 }
 
 #footer .footer-top .footer-info h3 span {
-  color: #ffc451;
+  color: #43aae1;
 }
 
 #footer .footer-top .footer-info p {
@@ -1478,7 +1478,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #ffc451;
+  background: #43aae1;
   color: #151515;
   text-decoration: none;
 }
@@ -1503,7 +1503,7 @@ section {
 
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #ffc451;
+  color: #43aae1;
   font-size: 18px;
   line-height: 1;
 }
@@ -1526,7 +1526,7 @@ section {
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: #ffc451;
+  color: #43aae1;
 }
 
 #footer .footer-top .footer-newsletter form {
@@ -1552,7 +1552,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #ffc451;
+  background: #43aae1;
   color: #151515;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
