--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,3 @@
-/**
-* Template Name: Gp - v2.1.0
-* Template URL: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
 
 /*--------------------------------------------------------------
 # General
@@ -18,7 +12,7 @@ a {
 }
 
 a:hover {
-  color: #43aae1;
+  color: #43aae1 !important;
   text-decoration: none;
 }
 
