--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1472,7 +1472,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #43aae1;
+  background: #fff;
   color: #151515;
   text-decoration: none;
 }
