--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1092,7 +1092,7 @@ section {
 
 .team .member .social a:hover {
   color: #fff;
-  background: #43aae1;
+  background: #fff;
 }
 
 .team .member .social i {
