--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ h1, h2, h3, h4, h5, h6 {
 #header {
   transition: all 0.5s;
   z-index: 997;
-  padding: 15px 0;
+  padding: 10px 0;
 }
 
 #header.header-scrolled, #header.header-inner-pages {
@@ -137,7 +137,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo img {
-  max-height: 40px;
+  max-height: 5rem;
 }
 
 /*--------------------------------------------------------------
