--- a/Home.css
+++ b/Home.css
@@ -1,20 +1,30 @@
-.u-section-1 {
-  background-image: url("images/pexelsphoto3761118.jpeg");
-  background-position: 50% 50%;
+.u-section-1 .u-sheet-1 {
+  min-height: 682px;
 }
 
-.u-section-1 .u-sheet-1 {
-  min-height: 752px;
+.u-section-1 .u-layout-wrap-1 {
+  pointer-events: auto;
+  margin-top: 240px;
+  margin-bottom: 60px;
+}
+
+.u-section-1 .u-layout-cell-1 {
+  pointer-events: auto;
+  min-height: 371px;
+}
+
+.u-section-1 .u-container-layout-1 {
+  padding: 30px 0;
 }
 
 .u-section-1 .u-text-1 {
-  font-weight: 900;
-  margin: 363px 762px 0 0;
+  font-weight: 700;
+  margin: 0;
 }
 
 .u-section-1 .u-form-1 {
-  height: 67px;
-  margin: 30px 751px 60px 0;
+  height: 50px;
+  margin: 6px 171px 0 0;
 }
 
 .u-section-1 .u-btn-1 {
@@ -23,63 +33,141 @@
   background-image: none;
 }
 
+.u-section-1 .u-image-1 {
+  pointer-events: auto;
+  background-image: url("images/patt3.jpg");
+  background-position: 50% 50%;
+}
+
+.u-section-1 .u-container-layout-2 {
+  padding: 30px 60px;
+}
+
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 620px;
+    min-height: 610px;
+  }
+
+  .u-section-1 .u-layout-wrap-1 {
+    margin-top: 226px;
+  }
+
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 321px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-right: 562px;
+    margin-top: 14px;
   }
 
   .u-section-1 .u-form-1 {
-    margin-right: 551px;
+    margin-right: 71px;
+  }
+
+  .u-section-1 .u-image-1 {
+    min-height: 321px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 475px;
+    min-height: 564px;
+  }
+
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 100px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-right: 342px;
+    width: auto;
+    margin-right: 20px;
   }
 
   .u-section-1 .u-form-1 {
-    margin-right: 331px;
+    width: 376px;
+    margin-top: 20px;
+    margin-right: 20px;
+  }
+
+  .u-section-1 .u-image-1 {
+    min-height: 277px;
+  }
+
+  .u-section-1 .u-container-layout-2 {
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 356px;
+    min-height: 1046px;
+  }
+
+  .u-section-1 .u-layout-wrap-1 {
+    margin-top: 224px;
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding-left: 50px;
+    padding-right: 50px;
   }
 
   .u-section-1 .u-text-1 {
-    width: 378px;
+    margin-left: -50px;
+    margin-right: -50px;
+  }
+
+  .u-section-1 .u-form-1 {
+    height: 113px;
+    margin-top: 23px;
     margin-left: auto;
     margin-right: auto;
   }
 
-  .u-section-1 .u-form-1 {
-    width: 389px;
-    margin-left: auto;
-    margin-right: auto;
+  .u-section-1 .u-image-1 {
+    min-height: 454px;
+  }
+
+  .u-section-1 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 224px;
+    min-height: 873px;
+  }
+
+  .u-section-1 .u-layout-wrap-1 {
+    margin-top: 209px;
+    margin-bottom: 38px;
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding-top: 28px;
+    padding-right: 0;
+    padding-bottom: 0;
   }
 
   .u-section-1 .u-text-1 {
-    width: 340px;
+    margin-top: -28px;
+    margin-right: 0;
   }
 
   .u-section-1 .u-form-1 {
     width: 340px;
+    margin-top: -3px;
+    margin-left: -50px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    width: 100%;
+  }
+
+  .u-section-1 .u-image-1 {
+    min-height: 360px;
   }
 }.u-section-2 {
   background-image: none;
@@ -161,7 +249,13 @@
 
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 288px;
+    min-height: 570px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-top: 0;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-2 .u-text-1 {
@@ -490,8 +584,6 @@
 .u-section-4 .u-shape-1 {
   height: 745px;
   width: calc(((100% - 1140px) / 2) + 896px);
-  background-image: none;
-  animation-duration: 1000ms;
   margin: 0 0 0 auto;
 }
 
@@ -658,7 +750,7 @@
   }
 
   .u-section-4 .u-layout-cell-7 {
-    min-height: 656px;
+    min-height: 100px;
   }
 
   .u-section-4 .u-container-layout-7 {
@@ -712,10 +804,6 @@
 
   .u-section-4 .u-image-5 {
     min-height: 581px;
-  }
-
-  .u-section-4 .u-layout-cell-7 {
-    min-height: 100px;
   }
 
   .u-section-4 .u-image-6 {
