--- a/Home.css
+++ b/Home.css
@@ -1,30 +1,35 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 682px;
+  min-height: 720px;
 }
 
 .u-section-1 .u-layout-wrap-1 {
   pointer-events: auto;
-  margin-top: 240px;
-  margin-bottom: 60px;
+  margin-top: 230px;
+  margin-bottom: 40px;
 }
 
 .u-section-1 .u-layout-cell-1 {
   pointer-events: auto;
-  min-height: 371px;
+  min-height: 450px;
 }
 
 .u-section-1 .u-container-layout-1 {
-  padding: 30px 0;
+  padding: 30px 31px 30px 0;
 }
 
 .u-section-1 .u-text-1 {
   font-weight: 700;
-  margin: 0;
+  margin: -30px 195px 0 0;
+}
+
+.u-section-1 .u-text-2 {
+  font-weight: normal;
+  margin: 100px 0 0;
 }
 
 .u-section-1 .u-form-1 {
   height: 50px;
-  margin: 6px 171px 0 0;
+  margin: 109px 171px 0 0;
 }
 
 .u-section-1 .u-btn-1 {
@@ -33,10 +38,16 @@
   background-image: none;
 }
 
+.u-section-1 .u-text-3 {
+  font-weight: 700;
+  margin: 6px 40px -30px 0;
+}
+
 .u-section-1 .u-image-1 {
   pointer-events: auto;
   background-image: url("images/patt3.jpg");
   background-position: 50% 50%;
+  min-height: 450px;
 }
 
 .u-section-1 .u-container-layout-2 {
@@ -53,15 +64,29 @@
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 321px;
+    min-height: 384px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 14px;
+    width: auto;
+    margin-right: 28px;
+  }
+
+  .u-section-1 .u-text-2 {
+    width: auto;
+    margin-top: 67px;
+    margin-left: 4px;
   }
 
   .u-section-1 .u-form-1 {
+    margin-top: 4px;
     margin-right: 71px;
+  }
+
+  .u-section-1 .u-text-3 {
+    width: auto;
+    margin-right: 0;
+    margin-bottom: -20px;
   }
 
   .u-section-1 .u-image-1 {
@@ -78,15 +103,27 @@
     min-height: 100px;
   }
 
+  .u-section-1 .u-container-layout-1 {
+    padding-right: 30px;
+  }
+
   .u-section-1 .u-text-1 {
-    width: auto;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-top: 34px;
     margin-right: 20px;
+    margin-left: 0;
   }
 
   .u-section-1 .u-form-1 {
-    width: 376px;
-    margin-top: 20px;
+    margin-top: 8px;
     margin-right: 20px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-bottom: -30px;
   }
 
   .u-section-1 .u-image-1 {
@@ -101,11 +138,16 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1046px;
+    min-height: 1134px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
-    margin-top: 224px;
+    margin-top: 255px;
+    margin-bottom: 0;
+  }
+
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 435px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -114,19 +156,31 @@
   }
 
   .u-section-1 .u-text-1 {
+    margin-top: -22px;
+    margin-left: -50px;
+    margin-right: -50px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-top: 31px;
     margin-left: -50px;
     margin-right: -50px;
   }
 
   .u-section-1 .u-form-1 {
     height: 113px;
-    margin-top: 23px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 540px;
+    margin-top: 7px;
+    margin-left: -50px;
+    margin-right: -50px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin: 16px -50px -15px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 454px;
+    min-height: 475px;
   }
 
   .u-section-1 .u-container-layout-2 {
@@ -137,96 +191,129 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 873px;
+    min-height: 992px;
   }
 
   .u-section-1 .u-layout-wrap-1 {
-    margin-top: 209px;
-    margin-bottom: 38px;
+    margin-top: 200px;
+    margin-bottom: 40px;
+  }
+
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 374px;
   }
 
   .u-section-1 .u-container-layout-1 {
-    padding-top: 28px;
-    padding-right: 0;
-    padding-bottom: 0;
+    padding: 0 10px 0 0;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: -28px;
-    margin-right: 0;
+    margin-top: 0;
+    margin-right: -10px;
+    margin-left: 0;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-top: 14px;
+    margin-right: -10px;
+    margin-left: 0;
   }
 
   .u-section-1 .u-form-1 {
-    width: 340px;
-    margin-top: -3px;
-    margin-left: -50px;
+    margin-top: 0;
+    margin-right: -10px;
+    margin-left: 0;
+    width: auto;
   }
 
   .u-section-1 .u-btn-1 {
     width: 100%;
   }
 
-  .u-section-1 .u-image-1 {
-    min-height: 360px;
+  .u-section-1 .u-text-3 {
+    margin: 9px -10px 0 0;
   }
-}.u-section-2 {
-  background-image: none;
-}
 
-.u-section-2 .u-sheet-1 {
-  min-height: 583px;
+  .u-section-1 .u-image-1 {
+    min-height: 406px;
+  }
+}.u-section-2 .u-sheet-1 {
+  min-height: 531px;
 }
 
 .u-section-2 .u-layout-wrap-1 {
-  margin: 50px auto 0 0;
+  pointer-events: auto;
+  margin-top: 45px;
+  margin-bottom: 45px;
 }
 
 .u-section-2 .u-layout-cell-1 {
-  min-height: 533px;
+  pointer-events: auto;
+  min-height: 470px;
 }
 
 .u-section-2 .u-container-layout-1 {
-  padding: 30px;
+  padding: 30px 0;
 }
 
 .u-section-2 .u-text-1 {
-  line-height: 1.2;
-  font-weight: 900;
-  font-size: 2.25rem;
-  margin: 96px 0 0;
+  font-weight: 700;
+  margin: -30px 358px 0 0;
 }
 
 .u-section-2 .u-text-2 {
-  font-size: 1rem;
-  line-height: 2;
-  font-weight: 700;
-  margin: 28px 0 0;
+  font-weight: normal;
+  margin: 96px 0 0;
 }
 
 .u-section-2 .u-layout-cell-2 {
-  min-height: 533px;
+  pointer-events: auto;
+  min-height: 470px;
 }
 
 .u-section-2 .u-container-layout-2 {
-  padding: 30px 0 0 30px;
+  padding: 30px 60px;
 }
 
 .u-section-2 .u-image-1 {
-  object-position: 50% 16.29%;
-  background-position: 50% 16.29%;
-  width: 481px;
-  left: auto;
+  width: 295px;
+  height: 357px;
+  margin: 0 auto;
 }
 
 @media (max-width: 1199px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 567px;
+    min-height: 501px;
   }
 
-  .u-section-2 .u-layout-wrap-1 {
-    margin-top: 20px;
-    margin-right: initial;
-    margin-left: initial;
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 425px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-right: 35px;
+  }
+
+  .u-section-2 .u-text-2 {
+    width: auto;
+    margin-top: 78px;
+    margin-right: 35px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    background-position: 50% 50%;
+    min-height: 425px;
+  }
+
+  .u-section-2 .u-image-1 {
+    width: 277px;
+    height: 331px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 564px;
   }
 
   .u-section-2 .u-layout-cell-1 {
@@ -234,80 +321,114 @@
   }
 
   .u-section-2 .u-text-1 {
-    font-size: 3rem;
+    width: auto;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-right: 20px;
   }
 
   .u-section-2 .u-layout-cell-2 {
-    min-height: 439px;
-    background-position: 50% 16.29%;
+    min-height: 395px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
   .u-section-2 .u-image-1 {
-    right: 0;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 570px;
-  }
-
-  .u-section-2 .u-layout-wrap-1 {
-    margin-top: 0;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-2 .u-text-1 {
-    font-size: 2.25rem;
-  }
-
-  .u-section-2 .u-layout-cell-2 {
-    min-height: 100px;
-  }
-
-  .u-section-2 .u-image-1 {
-    width: 407px;
-    height: 479px;
-    left: auto;
-    bottom: auto;
-    right: auto;
-    top: auto;
-    margin: 42px auto 0 -30px;
+    width: 253px;
+    height: 302px;
+    margin-left: -19px;
+    margin-right: -19px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 556px;
+    min-height: 100vh;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-top: 38px;
+    margin-bottom: 59px;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 246px;
   }
 
   .u-section-2 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-left: -50px;
+    margin-right: -50px;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-top: 27px;
+    margin-left: -50px;
+    margin-right: -50px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 328px;
   }
 
   .u-section-2 .u-container-layout-2 {
     padding-left: 10px;
+    padding-right: 10px;
   }
 
   .u-section-2 .u-image-1 {
-    width: 493px;
-    height: 521px;
-    margin-top: 0;
-    margin-left: 66px;
+    margin-right: auto;
+    margin-left: 120px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 369px;
+    min-height: 616px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-top: 0;
+    margin-bottom: 40px;
+  }
+
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 189px;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-top: 28px;
+    padding-right: 0;
+    padding-bottom: 0;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-top: -7px;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-top: 7px;
+    margin-right: 0;
+    margin-bottom: -21px;
+  }
+
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 267px;
   }
 
   .u-section-2 .u-image-1 {
-    width: 330px;
-    height: 349px;
-    margin-left: 0;
+    margin-top: 11px;
+    margin-left: auto;
   }
 }.u-section-3 {
   background-image: none;
