--- a/Home.css
+++ b/Home.css
@@ -434,7 +434,8 @@
   }
 
   .u-section-2 .u-text-3 {
-    margin: 51px -50px 0;
+    margin-top: 51px;
+    margin-bottom: 0;
   }
 }.u-section-3 {
   background-image: none;
