--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,7 @@ h1, h2, h3, h4, h5, h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
-  background: rgba(0, 0, 0, 0.5);
+  /* background: rgba(0, 0, 0, 0.5); */
   transition: all 0.5s;
   z-index: 997;
   padding: 10px 0;
