--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,7 +210,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Mobile Navigation */
 .mobile-nav-toggle {
-  position: fixed;
+  /* position: fixed; */
   top: 20px;
   right: 15px;
   z-index: 9998;
@@ -229,7 +229,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav {
-  position: fixed;
+  /* position: fixed; */
   top: 55px;
   right: 15px;
   bottom: 15px;
