--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -338,8 +338,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .container {
+  padding-bottom: 100px;
   position: relative;
-  padding-top: 74px;
+  /* padding-top: 74px; */
   text-align: center;
 }
 
