--- a/assets/css/privacy-policy-style.css
+++ b/assets/css/privacy-policy-style.css
@@ -33,6 +33,7 @@ h1 {
 
 .privacy-policy {
   padding-top: 120px;
+  padding-bottom: 30px;
 }
 
 /*--------------------------------------------------------------
