--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,16 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+@font-face {
+  font-family: "Conthrax Regular";
+  src: url("Conthrax Regular.otf") format("opentype");
+}
+
 body {
-  font-family: "Calibri", sans-serif;
+  font-family: "Conthrax Regular", sans-serif;
   color: #444444;
 }
+
 
 a {
   color: #000000;
@@ -14,10 +20,6 @@ a {
 a:hover {
   color: #ffffff !important;
   text-decoration: none;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Calibri", sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -44,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .back-to-top i:hover {
-  background: #151515;
+  background: #000000;
   color: #ffffff;
 }
 
@@ -66,7 +68,7 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0;
   z-index: 9999;
   overflow: hidden;
-  background: #151515;
+  background: #ffffff;
 }
 
 #preloader:before {
@@ -140,7 +142,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo img {
-  max-height: 5rem;
+  max-height: 4.5rem;
+  margin-top: 1rem;
 }
 
 @media (max-width: 768px) {
@@ -321,9 +324,9 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero h1 {
   margin: 0;
-  font-size: 50px;
+  font-size: 42px;
   font-weight: bolder;
-  line-height: 64px;
+  line-height: 42px;
   color: #000000;
 }
 
@@ -333,7 +336,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero h2 {
   color: #434345;
-  font-size: 24px;
+  font-size: 18px;
 }
 
 
